...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Contacts-->
        <scene sceneID="jjc-gp-cxh">
            <objects>
                <tableViewController title="Contacts" id="rdK-O6-Tn0" customClass="ContactsViewController" customModule="Contacts" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Lwk-yr-ClD">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <color key="tintColor" red="0.4362005591" green="0.95248728989999998" blue="0.82657718660000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                <state key="normal">
                                                    <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="image" keyPath="image" value="favourite_button_selected"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="text" value="favorite"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="buttonAction:" destination="9Ck-EI-meR" eventType="touchUpInside" id="EZu-vz-vKJ"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
                    <navigationItem key="navigationItem" id="SPT-28-RXS">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="9sC-Ip-y5x">
                            <connections>
                                <action selector="cancelAction:" destination="3vt-YM-mA4" id="dn6-PZ-930"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="arx-t2-GYa">
                            <connections>
                                <action selector="saveAction:" destination="3vt-YM-mA4" id="FEb-hb-9tB"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
